--- a/NB-Spam Filter.ipynb
+++ b/NB-Spam Filter.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -78,21 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading messages ...\n",
-      "Reading labels ...\n",
-      "86103 seconds reading and parsing ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read messages\n",
     "print \"Reading messages ...\"\n",
@@ -100,12 +90,9 @@
     "\n",
     "messages = []\n",
     "heldout_messages = {}\n",
-    "for path in glob.glob(os.path.join(DATA_DIR, '*'))[:10000]:\n",
+    "for path in glob.iglob(os.path.join(DATA_DIR, '*')):\n",
     "    m = Message.load(path)\n",
-    "    if m.id in heldout_labels.index:\n",
-    "        heldout_messages[m.id] = m\n",
-    "    else:\n",
-    "        messages.append(m)\n",
+    "    messages.append(m)\n",
     "\n",
     "# Read the labels\n",
     "print \"Reading labels ...\"\n",
@@ -137,20 +124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating feature vectors ...\n",
-      "61 seconds extracting features ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Split the data in 70% training, 30% testing\n",
     "print \"Creating feature vectors ...\"\n",
@@ -221,19 +199,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Split the data set in training 70% and testing 30%\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=.7)\n",
@@ -247,32 +217,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing:\n",
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "       Spam       0.94      0.95      0.94      2074\n",
-      "        Ham       0.88      0.86      0.87       926\n",
-      "\n",
-      "avg / total       0.92      0.92      0.92      3000\n",
-      "\n",
-      "\n",
-      "Accuracy: 0.921\n",
-      "\n",
-      "Confusion matrix:\n",
-      "[[1963  111]\n",
-      " [ 127  799]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print \"Testing:\"\n",
     "y_pred = nb.predict(X_test)\n",
