--- a/NB-Spam Filter.ipynb
+++ b/NB-Spam Filter.ipynb
@@ -78,11 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading messages ...\n",
+      "Reading labels ...\n",
+      "556 seconds reading and parsing ...\n"
+     ]
+    }
+   ],
    "source": [
     "# Read messages\n",
     "print \"Reading messages ...\"\n",
@@ -124,11 +134,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating feature vectors ...\n",
+      "479 seconds extracting features ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/enoriega/.virtualenvs/NLP/lib/python2.7/site-packages/nltk/stem/porter.py:274: UnicodeWarning: Unicode equal comparison failed to convert both arguments to Unicode - interpreting them as being unequal\n",
+      "  if word[-1] == 's':\n"
+     ]
+    }
+   ],
    "source": [
     "# Split the data in 70% training, 30% testing\n",
     "print \"Creating feature vectors ...\"\n",
@@ -199,11 +226,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training ...\n"
+     ]
+    }
+   ],
    "source": [
     "# Split the data set in training 70% and testing 30%\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=.7)\n",
@@ -217,11 +252,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing:\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "       Spam       0.94      0.97      0.95     15023\n",
+      "        Ham       0.93      0.88      0.90      7603\n",
+      "\n",
+      "avg / total       0.94      0.94      0.94     22626\n",
+      "\n",
+      "\n",
+      "Accuracy: 0.938\n",
+      "\n",
+      "Confusion matrix:\n",
+      "[[14501   522]\n",
+      " [  890  6713]]\n"
+     ]
+    }
+   ],
    "source": [
     "print \"Testing:\"\n",
     "y_pred = nb.predict(X_test)\n",
